# devnagari-lang-web

./: .gitignore  LICENSE  README.md  build_package.py  fix_imports.py  index.html  pyproject.toml  setup.py
.github/workflows/: deploy.yml
devnagari_lang/: __init__.py  devnagari.py  example.py  interpreter.py  parser.py
examples/: factorial.dev  fibonacci.dev
src/: devnagari.py  example.py  interpreter.py  lexer.py  parser.py
web/: README.md
