[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "devnagari-lang"
version = "0.1.0"
authors = [
    { name="Your Name", email="your.email@example.com" },
]
description = "A programming language using Devanagari script"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/yourusername/devnagari-lang" 